--- a/main.html
+++ b/main.html
@@ -224,7 +224,7 @@
 
                 </article>
                 <article class="info-current-without-card-bottom">
-                  <article class="top">
+                  <article class="top addCard">
                     <article class="top-top">
                       <figure class="img-add-card"></figure>
                     </article>
@@ -239,6 +239,40 @@
                   </article>
 
                 </article>
+
+                <article class="info-current-new-card-bottom">
+
+                  <article class="owner-credit-card ui-input">
+                    <input class="owner-card" placeholder="Nombre del titular">
+                    </input>
+                  </article>
+
+
+                  <article class="number-credit-card ui-input">
+                    <input class="number-card" placeholder="Numero de la tarjeta">
+                    </input>
+                  </article>
+
+                  <article class="options-credit-card">
+
+                    <article class="month-credit-card ui-input">
+                      <input class="month-card" placeholder="Mes">
+                      </input>
+                    </article>
+
+                    <article class="year-credit-card ui-input">
+                      <input class="year-card" placeholder="Año">
+                      </input>
+                    </article>
+
+                    <article class="code-credit-card ui-input">
+                      <input class="code-card" placeholder="CVV">
+                      </input>
+                    </article>
+
+                  </article>
+                </article>
+
 
               </article>
 
@@ -309,9 +343,9 @@
                       <article class="info-current-card-right">
 
                         <article class="info-current-card-button top">
-                              <article class="card-button moreStorage">
+                              <article class="card-button">
                                 <article class="black-circle maxi more-icon">
-                                  <figure></figure>
+                                  <figure class="moreStorage"></figure>
                                 </article>
                               </article>
                         </article>
@@ -331,9 +365,9 @@
                         </article>
 
                         <article class="info-current-card-button bottom">
-                          <article class="card-button minusStorage">
+                          <article class="card-button">
                             <article class="black-circle maxi minus-icon">
-                              <figure></figure>
+                              <figure class="minusStorage"></figure>
                             </article>
                           </article>
                         </article>
@@ -355,7 +389,6 @@
                     <span></span>
                   </button>
                 </article>
-
 
         </section>
 
@@ -427,7 +460,7 @@
             <article class="right">
               <article class="top">
 
-                <article class="box-current-plan">
+                <article class="box-current-plan fr-box">
 
                   <article class="box-current-plan-top">
                     <span></span>
@@ -473,6 +506,44 @@
 
 
                 </article>
+
+                <!--
+                Option premium
+              -->
+              <article class="box-current-plan hidden pr-box">
+
+
+                <article class="box-current-plan-top">
+                  <span></span>
+                </article>
+
+                <article class="box-current-plan-middle">
+
+                  <article class="premium-version">
+                    <article class="premium-info">
+                      <article class="left">
+                        <span></span>
+                      </article>
+                      <article class="right">
+                        <span></span>
+                      </article>
+                    </article>
+                    <article class="premium-date">
+                      <span></span>
+                    </article>
+                  </article>
+
+
+                </article>
+
+                <article class="box-current-plan-bottom">
+                  <button class="ui-btn siguiente accept">
+                    <span></span>
+                  </button>
+                </article>
+
+
+              </article>
 
               </article>
               <article class="bottom">
@@ -538,9 +609,9 @@
                       <article class="info-current-card-right">
 
                         <article class="info-current-card-button top">
-                              <article class="card-button moreStorage">
+                              <article class="card-button">
                                 <article class="black-circle maxi more-icon">
-                                  <figure></figure>
+                                  <figure class="moreStorage"></figure>
                                 </article>
                               </article>
                         </article>
@@ -560,9 +631,9 @@
                         </article>
 
                         <article class="info-current-card-button bottom">
-                          <article class="card-button minusStorage">
+                          <article class="card-button">
                             <article class="black-circle maxi minus-icon">
-                              <figure></figure>
+                              <figure class="minusStorage"></figure>
                             </article>
                           </article>
                         </article>
@@ -725,7 +796,7 @@
 
 
                   <article class="preferences-hdd-payment-bottom">
-                    <button class="ui-btn accept siguiente">
+                    <button class="ui-btn accept validate">
                       <span></span>
                     </button>
                   </article>
