apply payments.js

--- a/main.html
+++ b/main.html
@@ -412,7 +412,7 @@
 
           <article class="finish-bottom">
 
-            <button class="ui-btn accept inicio">
+            <button class="ui-btn accept inicio updatePremium">
                 <span></span>
             </button>
 
@@ -629,11 +629,10 @@
                           </article>
 
                         </article>
-
                         <article class="info-current-card-button bottom">
                           <article class="card-button">
-                            <article class="black-circle maxi minus-icon">
-                              <figure class="minusStorage"></figure>
+                            <article class="black-circle maxi minus-icon block">
+                              <figure class=""></figure>
                             </article>
                           </article>
                         </article>
@@ -827,7 +826,7 @@
 
           <article class="finish-bottom">
 
-            <button class="ui-btn accept inicio">
+            <button class="ui-btn accept inicio loadPremium">
                 <span></span>
             </button>
 
