--- a/main.html
+++ b/main.html
@@ -281,7 +281,7 @@
           </article>
 
           <article class="preferences-hdd-payment-bottom">
-            <button class="ui-btn accept atras">
+            <button class="ui-btn accept atras saveCard">
               <span></span>
             </button>
           </article>
@@ -385,7 +385,7 @@
 
 
                 <article class="preferences-hdd-payment-bottom">
-                  <button class="ui-btn siguiente accept">
+                  <button class="ui-btn accept validate">
                     <span></span>
                   </button>
                 </article>
