--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@
                   </article>
 
                   <article class="box-current-plan-bottom">
-                    <button class="ui-btn siguiente accept">
+                    <button class="ui-btn nextTab accept">
                       <span></span>
                     </button>
                   </article>
@@ -128,7 +128,7 @@
 
           <article class="preferences-hdd-payment-top">
 
-            <article class="black-circle mini atras">
+            <article class="black-circle mini back">
               <figure></figure>
             </article>
             <span></span>
@@ -224,7 +224,7 @@
 
                 </article>
                 <article class="info-current-without-card-bottom">
-                  <article class="top addCard">
+                  <article class="top addCard focuted">
                     <article class="top-top">
                       <figure class="img-add-card"></figure>
                     </article>
@@ -240,7 +240,7 @@
 
                 </article>
 
-                <article class="info-current-new-card-bottom">
+                <article class="info-current-new-card-bottom credit-card-info">
 
                   <article class="owner-credit-card ui-input">
                     <input class="owner-card" placeholder="Nombre del titular">
@@ -281,8 +281,11 @@
           </article>
 
           <article class="preferences-hdd-payment-bottom">
-            <button class="ui-btn accept atras saveCard">
+            <button class="ui-btn accept back save">
               <span></span>
+              <article class="loader">
+
+              </article>
             </button>
           </article>
 
@@ -293,7 +296,7 @@
         <section class="preferences-hdd-payment premium modify-space ">
 
                 <article class="preferences-hdd-payment-top">
-                  <article class="black-circle mini atras">
+                  <article class="black-circle mini back">
                     <figure></figure>
                   </article>
                   <span></span>
@@ -344,8 +347,8 @@
 
                         <article class="info-current-card-button top">
                               <article class="card-button">
-                                <article class="black-circle maxi more-icon">
-                                  <figure class="moreStorage"></figure>
+                                <article class="black-circle maxi more-icon moreStorage">
+                                  <figure ></figure>
                                 </article>
                               </article>
                         </article>
@@ -366,8 +369,8 @@
 
                         <article class="info-current-card-button bottom">
                           <article class="card-button">
-                            <article class="black-circle maxi minus-icon">
-                              <figure class="minusStorage"></figure>
+                            <article class="black-circle maxi minus-icon minusStorage">
+                              <figure></figure>
                             </article>
                           </article>
                         </article>
@@ -499,7 +502,7 @@
                   </article>
 
                   <article class="box-current-plan-bottom">
-                    <button class="ui-btn  siguiente accept">
+                    <button class="ui-btn  nextTab accept">
                       <span></span>
                     </button>
                   </article>
@@ -537,7 +540,7 @@
                 </article>
 
                 <article class="box-current-plan-bottom">
-                  <button class="ui-btn siguiente accept">
+                  <button class="ui-btn nextTab accept">
                     <span></span>
                   </button>
                 </article>
@@ -559,7 +562,7 @@
 
 
                 <article class="preferences-hdd-payment-top">
-                  <article class="black-circle mini atras">
+                  <article class="black-circle mini back">
                     <figure></figure>
                   </article>
                   <span></span>
@@ -610,8 +613,8 @@
 
                         <article class="info-current-card-button top">
                               <article class="card-button">
-                                <article class="black-circle maxi more-icon">
-                                  <figure class="moreStorage"></figure>
+                                <article class="black-circle maxi more-icon moreStorage">
+                                  <figure></figure>
                                 </article>
                               </article>
                         </article>
@@ -650,7 +653,7 @@
 
 
                 <article class="preferences-hdd-payment-bottom">
-                  <button class="ui-btn siguiente accept">
+                  <button class="ui-btn nextTab accept">
                     <span></span>
                   </button>
                 </article>
@@ -661,7 +664,7 @@
         <section class="preferences-hdd-payment free order">
 
                   <article class="preferences-hdd-payment-top">
-                    <article class="black-circle mini atras">
+                    <article class="black-circle mini back">
                       <figure></figure>
                     </article>
                     <span></span>
@@ -753,7 +756,7 @@
 
                           </article>
 
-                          <article class="info-current-card-bottom">
+                          <article class="info-current-card-bottom credit-card-info">
 
                             <article class="owner-credit-card ui-input">
                               <input class="owner-card" placeholder="Nombre del titular">
@@ -797,6 +800,8 @@
                   <article class="preferences-hdd-payment-bottom">
                     <button class="ui-btn accept validate">
                       <span></span>
+                      <article class="loader">
+                      </article>
                     </button>
                   </article>
 
