--- a/main.html
+++ b/main.html
@@ -502,7 +502,7 @@
                   </article>
 
                   <article class="box-current-plan-bottom">
-                    <button class="ui-btn  nextTab accept">
+                    <button class="ui-btn  nextTab accept moreInfo">
                       <span></span>
                     </button>
                   </article>
