--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         <li class="social wz-dragger"></li>
         <li class="config wz-dragger"></li>
         <li class="custom wz-dragger"></li>
-        <!--<li class="invite wz-dragger"></li>-->
+        <li class="invite wz-dragger"></li>
         <li class="backup wz-dragger"></li>
         <li class="payment wz-dragger"></li>
         <!--<li class="about wz-dragger"></li>-->
@@ -595,6 +595,34 @@
     </section>
 
     <!-- BACKUP ZONE FINISH -->
+
+    <!-- INVITE ZONE START -->
+
+    <section class="preferences-bottom-content invite">
+
+      <section class="left-side">
+        <span class="title"></span>
+        <span class="subtitle"></span>
+      </section>
+      <section class="right-side">
+        <span class="emails"></span>
+        <section class="mail-list wz-scroll">
+          <input class="mail">
+          <input class="mail">
+          <input class="mail">
+          <input class="mail wz-prototype">
+        </section>
+        <section class="add-mail">
+          <span class="add-mail-text"></span>
+        </section>
+      </section>
+      <section class="share-button">
+        <span class="share-text"></span>
+      </section>
+      
+    </section>
+
+    <!-- INVITE ZONE FINISH -->
 
     <!-- PAYMENT ZONE START -->
 
