Hide social tab

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
     <nav class="wz-dragger">
         <li class="hdd active wz-dragger"></li>
         <li class="account wz-dragger"></li>
-        <li class="social wz-dragger"></li>
+        <!--<li class="social wz-dragger"></li>-->
         <li class="config wz-dragger"></li>
         <li class="custom wz-dragger"></li>
         <li class="invite wz-dragger"></li>
