--- a/main.html
+++ b/main.html
@@ -165,7 +165,7 @@
 
                     <article class="options-bottom">
                       <article class="top">
-                        <span></span>
+                        <span class="summary-subtitle"></span>
                       </article>
                       <article class="bottom">
                         <span></span>
@@ -284,7 +284,7 @@
                   <i></i>
                 </figure>
                 <span></span>
-                <a class="underline focuted stripe pointer" href="https://stripe.com/us/customers" target="_blank"></a>
+                <a class="underline stripe pointer" href="https://stripe.com/us/customers" target="_blank"></a>
 
               </article>
 
@@ -428,10 +428,10 @@
                                       <span></span>
                                     </article>
                                     <article class="options-top-body">
-                                      <span></span>
+                                      <span class="summary-subtitle"></span>
                                       <article class="body-bottom">
                                         <article class="left">
-                                          <span></span>
+                                          <span class="summary-subtitle-big"></span>
                                         </article>
                                         <article class="right">
                                           <span></span>
@@ -446,18 +446,18 @@
                                 </article>
 
                                 <article class="options-bottom">
-                                  <article class="top">
+                                  <article class="top summary-subtitle">
                                     <span class="left"></span>
                                     <span class="right"></span>
                                   </article>
                                   <article class="bottom">
 
                                     <article class="left">
-                                      <span class="big"></span>
+                                      <span class="big summary-subtitle-big"></span>
                                     </article>
 
                                     <article class="right">
-                                      <span class="big"></span>
+                                      <span class="big summary-subtitle-big"></span>
                                     </article>
                                   </article>
                                 </article>
@@ -891,10 +891,10 @@
                                       <span></span>
                                     </article>
                                     <article class="options-top-body">
-                                      <span></span>
+                                      <span class="summary-subtitle"></span>
                                       <article class="body-bottom">
                                         <article class="left">
-                                          <span></span>
+                                          <span class="summary-subtitle-big"></span>
                                         </article>
                                         <article class="right">
                                           <span></span>
@@ -909,11 +909,11 @@
                                 </article>
 
                                 <article class="options-bottom">
-                                  <article class="top">
+                                  <article class="top summary-subtitle">
                                     <span class="left"></span>
                                     <span class="right"></span>
                                   </article>
-                                  <article class="bottom">
+                                  <article class="bottom summary-subtitle-big">
 
                                     <article class="left">
                                       <span class="big"></span>
