--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
           <li class="social wz-dragger"></li>
           <li class="config wz-dragger"></li>
           <li class="custom wz-dragger"></li>
+          <li class="invite wz-dragger"></li>
           <li class="backup wz-dragger"></li>
           <!--<li class="invite wz-dragger"></li>-->
           <!--<li class="about wz-dragger"></li>-->
@@ -1583,46 +1584,31 @@
     <!-- CUSTOMIZE ZONE FINISH -->
 
     <!-- INVITE ZONE START -->
-    <!--
+
     <section class="preferences-bottom-content invite">
 
-        <span class="preferences-bottom-title invite"></span>
-        <span class="preferences-bottom-description invite"></span>
-
-        <article class="preferences-invite-ticket">
-            <img src="https://static.inevio.com/app/374/ticket.png" />
-        </article>
-
-        <article class="preferences-bottom-input invite">
-            <span class="wz-selectable"></span>
-        </article>
-
-        <section class="preferences-account-buttons invite">
-
-            <article class="preferences-button active invite">
-                <span class="preferences-account-button invite"></span>
-            </article>
-
+      <section class="left-side">
+        <span class="title"></span>
+        <span class="subtitle"></span>
+      </section>
+      <section class="right-side">
+        <span class="emails"></span>
+        <section class="mail-list wz-scroll">
+          <input class="mail">
+          <input class="mail">
+          <input class="mail">
+          <input class="mail wz-prototype">
         </section>
-
-        <span class="preferences-invite-left"></span>
-        <span class="preferences-invite-beware"></span>
-
-        <figure class="preferences-invite-invited">
-            <i></i>
-        </figure>
-
-        <section class="preferences-invite-friends">
-
-            <article class="wz-prototype">
-                <img />
-                <span class="ellipsis wz-selectable"></span>
-            </article>
-
+        <section class="add-mail">
+          <span class="add-mail-text"></span>
         </section>
+      </section>
+      <section class="share-button">
+        <span class="share-text"></span>
+      </section>
 
     </section>
-  -->
+
     <!-- INVITE ZONE FINISH -->
 
     <!-- BACKUP ZONE START -->
