--- a/main.html
+++ b/main.html
@@ -27,12 +27,11 @@
       <nav class="wz-dragger">
           <li class="account wz-dragger"></li>
           <li class="hdd active wz-dragger"></li>
-          <li class="social wz-dragger"></li>
+          <!--<li class="social wz-dragger"></li>-->
           <li class="config wz-dragger"></li>
           <li class="custom wz-dragger"></li>
           <li class="invite wz-dragger"></li>
           <li class="backup wz-dragger"></li>
-          <!--<li class="invite wz-dragger"></li>-->
           <!--<li class="about wz-dragger"></li>-->
       </nav>
     </section>
