--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<section class="preferences-top ui-header dark wz-dragger">
+<section class="preferences-top ui-header  wz-dragger">
 
     <section class="preferences-top-header wz-dragger">
 
@@ -38,7 +38,10 @@
 
 </section>
 
-<section class="preferences-bottom dark wz-scroll-y">
+<section class="preferences-bottom  wz-scroll-y">
+
+
+
 
     <!-- HDD ZONE START -->
 
@@ -1068,103 +1071,92 @@
 
       </section>
 
-
-      <!--
-        <span class="preferences-bottom-title hdd"></span>
-        <span class="preferences-bottom-description hdd"></span>
-
-
-      <article class="preferences-hdd-content-top">
-        <figure class="hdd-top-icon">
-          <i></i>
-        </figure>
-        <span></span>
-      </article>
-
-        <article class="preferences-hdd-quota">
-
-            <span class="preferences-hdd-usage"></span>
-
-            <figure class="preferences-hdd-cake">
-              <span class="preferences-hdd-cake-circle">
-                <span class="preferences-hdd-cake-total"></span>
-                <span class="preferences-hdd-cake-free"></span>
-              </span>
-
-                <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
-
-            </figure>
-
-        </article>
-
-        <span class="preferences-about-version"></span>
-
-        <!--
-        <section class="preferences-hdd-account">
-
-            <section class="preferences-hdd-plans">
-
-                <span class="preferences-plans-title"></span>
-
-                <article class="preferences-button hdd-plans-starter">
-                    <span class="hdd-plan-space starter"></span>
-                    <span class="hdd-plan-price starter"></span>
-                </article>
-
-                <article class="preferences-button hdd-plans-pro">
-                    <span class="hdd-plan-space pro"></span>
-                    <span class="hdd-plan-price pro"></span>
-                </article>
-
-                <article class="preferences-button hdd-plans-advance">
-                    <span class="hdd-plan-space advance"></span>
-                    <span class="hdd-plan-price advance"></span>
-                </article>
-
-                <article class="preferences-button hdd-plans-ultimate">
-                    <span class="hdd-plan-space ultimate"></span>
-                    <span class="hdd-plan-price ultimate"></span>
-                </article>
-
-            </section>
-
-            <section class="preferences-hdd-card">
-
-                <article class="preferences-card-top">
-                    <i class="preferences-card-close"></i>
-                    <span class="preferences-card-title"></span>
-                    <span class="preferences-card-price"></span>
-                </article>
-
-                <article class="preferences-card-bottom">
-
-                    <span class="preferences-card-description-one"></span>
-                    <span class="preferences-card-description-two"></span>
-                    <span class="preferences-card-description-three"></span>
-                    <span class="preferences-card-description-four"></span>
-
-                    <article class="preferences-button active preferences-card-subscribe">
-                        <span class="preferences-card-subscribe-text"></span>
-                    </article>
-
-                </article>
-
-            </section>
-
-            <i class="preferences-card-prev"></i>
-            <i class="preferences-card-next"></i>
-
-        </section>
-        -->
-
     </section>
 
     <!-- HDD ZONE FINISH -->
+
+
 
     <!-- ACCOUNT ZONE START -->
 
     <section class="preferences-bottom-content account">
 
+      <!--
+
+      <article class="preferences-bottom-content-title">
+        <article class="title-icon">
+          <article class="title-icon-figure">
+          </article>
+        </article>
+        <article class="preferences-bottom-title">
+          <span></span>
+        </article>
+      </article>
+    -->
+
+      <article class="preferences-bottom-content-avatar">
+        <article class="preferences-account-top">
+
+            <figure class="preferences-avatar-container">
+                <canvas class="preferences-account-avatar" width="148px" height="148px"></canvas>
+                <figure class="preferences-account-image"></figure>
+            </figure>
+
+            <span class="avatar-edit wz-avatar-uploader-start"></span>
+
+        </article>
+      </article>
+
+      <article class="bottom-account-card">
+
+        <article class="account-card username">
+          <article class="card-content">
+            <article class="left">
+              <span></span>
+            </article>
+            <article class="right">
+              <span></span>
+            </article>
+          </article>
+        </article>
+
+        <article class="account-card email">
+          <article class="card-content">
+            <article class="left">
+              <span></span>
+            </article>
+            <article class="right">
+              <span></span>
+            </article>
+          </article>
+        </article>
+
+        <article class="account-card password">
+          <article class="card-content">
+            <article class="left">
+              <span></span>
+            </article>
+            <article class="right">
+              <span></span>
+            </article>
+          </article>
+        </article>
+
+
+        <article class="account-card deleteAccount">
+          <article class="card-content">
+            <article class="left">
+              <span></span>
+            </article>
+            <article class="right">
+              <span></span>
+            </article>
+          </article>
+        </article>
+
+      </article>
+
+        <!--
         <span class="preferences-bottom-title account"></span>
         <span class="preferences-bottom-description account"></span>
 
@@ -1180,10 +1172,11 @@
         </article>
 
         <section class="preferences-bottom-input-containter">
-        <article class="preferences-bottom-container dark">
+        <article class="preferences-bottom-container ">
           <article class="preferences-bottom-label">
             <span class="preferences-bottom-labelUsername"></span>
           </article>
+        -->
 
           <!--article class="preferences-bottom-input top account-username ui-input-search">
               <article class="preferences-bottom-input-container">
@@ -1192,7 +1185,7 @@
                 <i class="preferences-input-status"></i>
               </article>
           </article -->
-
+          <!--
           <section class="ui-input-search account-username">
             <figure class="input-icon user-icon search-icon">
               <i></i>
@@ -1205,10 +1198,11 @@
 
         </article>
 
-        <article class="preferences-bottom-container dark">
+        <article class="preferences-bottom-container ">
           <article class="preferences-bottom-label">
             <span class="preferences-bottom-labelMail"></span>
           </article>
+        -->
 
           <!--article class="preferences-bottom-input bottom account-mail ui-input-search">
               <article class="preferences-bottom-input-container">
@@ -1218,6 +1212,8 @@
               </article>
           </article>
         </article -->
+
+        <!--
         <section class="ui-input-search account-mail">
           <figure class="input-icon mail-icon search-icon">
             <i></i>
@@ -1243,6 +1239,8 @@
               </article>
             </article>
         </section>
+
+      -->
     </section>
 
     <!-- ACCOUNT ZONE FINISH -->
@@ -1254,7 +1252,7 @@
         <span class="preferences-bottom-title password"></span>
         <span class="preferences-bottom-description password"></span>
 
-        <article class="preferences-bottom-password-container dark">
+        <article class="preferences-bottom-password-container ">
 
           <article class="preferences-bottom-labelPassword">
             <span class="preferences-bottom-labelCurrentPassword labelPassword"></span>
@@ -1378,7 +1376,7 @@
 
             <article class="preferences-social-account wz-prototype">
                 <img class="preferences-social-avatar" />
-                <span class="ellipsis preferences-social-name dark"></span>
+                <span class="ellipsis preferences-social-name "></span>
                 <span class="preferences-social-icon settings">
                   <span class="preferences-social-icon-gear"></span>
                 </span>
@@ -1519,7 +1517,7 @@
 
         <span class="preferences-bottom-title extensions"></span>
 
-        <article class="preferences-bottom-checkbox preferences-extensions-display dark">
+        <article class="preferences-bottom-checkbox preferences-extensions-display ">
 
             <figure class="ui-checkbox">
                 <i></i>
