--- a/main.html
+++ b/main.html
@@ -235,38 +235,57 @@
                 <article class="info-current-new-card-bottom credit-card-info">
 
                   <article class="number-credit-card input-long new-input">
-                    <figure class="icon-number-card">
+                    <figure class="icon icon-number-card">
 
                     </figure>
                     <input class="number-card" placeholder="Número de la tarjeta">
                     </input>
+
+                    <figure class="delete-content">
+                      <i></i>
+                    </figure>
                   </article>
 
                   <article class="owner-credit-card input-long new-input">
-                    <figure class="icon-owner-card">
+                    <figure class="icon icon-owner-card">
 
                     </figure>
                     <input class="owner-card" placeholder="Nombre del titular">
                     </input>
+
+                    <figure class="delete-content">
+                      <i></i>
+                    </figure>
+
                   </article>
 
 
                   <article class="options-credit-card">
 
                     <article class="month-year-credit-card input-normal new-input">
-                      <figure class="icon-month-year-card">
+                      <figure class="icon icon-month-year-card">
 
                       </figure>
                       <input class="month-year-card" placeholder="MM/YY">
                       </input>
+
+                      <figure class="delete-content">
+                        <i></i>
+                      </figure>
+
                     </article>
 
                     <article class="code-credit-card input-short new-input">
-                      <figure class="icon-code-card">
+                      <figure class="icon icon-code-card">
 
                       </figure>
                       <input class="code-card" placeholder="CVV">
                       </input>
+
+                      <figure class="delete-content">
+                        <i></i>
+                      </figure>
+
                     </article>
 
                   </article>
@@ -529,38 +548,57 @@
                           <article class="info-current-new-card-bottom credit-card-info">
 
                             <article class="number-credit-card input-long new-input">
-                              <figure class="icon-number-card">
+                              <figure class="icon icon-number-card">
 
                               </figure>
                               <input class="number-card" placeholder="Número de la tarjeta">
                               </input>
+
+                              <figure class="delete-content">
+                                <i></i>
+                              </figure>
+
                             </article>
 
                             <article class="owner-credit-card input-long new-input">
-                              <figure class="icon-owner-card">
+                              <figure class="icon icon-owner-card">
 
                               </figure>
                               <input class="owner-card" placeholder="Nombre del titular">
                               </input>
+
+                              <figure class="delete-content">
+                                <i></i>
+                              </figure>
+
                             </article>
 
 
                             <article class="options-credit-card">
 
                               <article class="month-year-credit-card input-normal new-input">
-                                <figure class="icon-month-year-card">
+                                <figure class="icon icon-month-year-card">
 
                                 </figure>
                                 <input class="month-year-card" placeholder="MM/YY">
                                 </input>
+
+                                <figure class="delete-content">
+                                  <i></i>
+                                </figure>
                               </article>
 
                               <article class="code-credit-card input-short new-input">
-                                <figure class="icon-code-card">
+                                <figure class="icon icon-code-card">
 
                                 </figure>
                                 <input class="code-card" placeholder="CVV">
                                 </input>
+
+                                <figure class="delete-content">
+                                  <i></i>
+                                </figure>
+
                               </article>
 
                             </article>
@@ -967,38 +1005,56 @@
                           <article class="info-current-card-bottom credit-card-info">
 
                             <article class="number-credit-card input-long new-input">
-                              <figure class="icon-number-card">
+                              <figure class="icon icon-number-card">
 
                               </figure>
                               <input class="number-card" placeholder="Número de la tarjeta">
                               </input>
+
+                              <figure class="delete-content">
+                                <i></i>
+                              </figure>
+
                             </article>
 
                             <article class="owner-credit-card input-long new-input">
-                              <figure class="icon-owner-card">
+                              <figure class="icon icon-owner-card">
 
                               </figure>
                               <input class="owner-card" placeholder="Nombre del titular">
                               </input>
+
+                              <figure class="delete-content">
+                                <i></i>
+                              </figure>
+
                             </article>
 
 
                             <article class="options-credit-card">
 
                               <article class="month-year-credit-card input-normal new-input">
-                                <figure class="icon-month-year-card">
+                                <figure class="icon icon-month-year-card">
 
                                 </figure>
                                 <input class="month-year-card" placeholder="MM/YY">
                                 </input>
+
+                                <figure class="delete-content">
+                                  <i></i>
+                                </figure>
+
                               </article>
 
                               <article class="code-credit-card input-short new-input">
-                                <figure class="icon-code-card">
+                                <figure class="icon icon-code-card">
 
                                 </figure>
                                 <input class="code-card" placeholder="CVV">
                                 </input>
+                                <figure class="delete-content">
+                                  <i></i>
+                                </figure>
                               </article>
 
                             </article>
